--- a/project.html
+++ b/project.html
@@ -57,7 +57,7 @@
 
 
     <div class="container">
-      <img class="img-responsive img" src="image/bed4.jpg" alt="First slide" style="width: 100%; height: 500px;" >
+      <img class="img-responsive img" src="ihjhj.png.jpg" alt="First slide" style="width: 100%; height: 500px;" >
       <div class="container">
         <h2> LET LUXUARY </h2>
         <h1>REVIVE YOU</h1>
